--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ MYSQLDB_ROOT_PASSWORD=Leonel2008
 MYSQLDB_DATABASE=cursodockerapp
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
-API_URL = http://192.168.0.126:3000/
+API_URL = http://localhost:3000/
